--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Bulochka</title>
+    <title>Motivator</title>
 </head>
 <body>
     <div class="yashik">
 
         <div class="CVETIK">
-            <h1>click the button</h1>
-            <h2>Color is #<span id="reshetka">00000</span></h2>
-            <button class="button" onclick="change()">lick Me</button>
+            <span class="mainText">Твой мотиватор</span>
+            <div class="smile"><img src="https://media.tenor.com/YcHBvIIpTnsAAAAi/hug-telagram-emoji.gif"></div>            
+                <button class="button-36" id="speak" onclick="motiv();speakText();">Мотивируй меня!</button>  
+                    <h2><span class="motivate" id="motivation"></span></h2>
+                    
+                </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script  src="script.js"></script>
 </body>
 </html>
