--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/magic-cards"></script>
     <link rel="stylesheet" href="style.css">
     <title>Motivator</title>
 </head>
-<body>
-    <div class="yashik">
 
-        <div class="CVETIK">
-            <span class="mainText">Твой мотиватор</span>
-            <div class="smile"><img src="https://media.tenor.com/YcHBvIIpTnsAAAAi/hug-telagram-emoji.gif"></div>            
-                <button class="button-36" id="speak" onclick="motiv();speakText();">Мотивируй меня!</button>  
-                    <h2><span class="motivate" id="motivation"></span></h2>
-                    
-                </div>
+<body>
+    <div class="CVETIK">
+        <span class="mainText">
+            <h1>Твой мотиватор</h1>
+        </span>
+        <div class="smile"><img src="https://media.tenor.com/YcHBvIIpTnsAAAAi/hug-telagram-emoji.gif"></div>
+        <div class="motivationText">
+            <h2><span class="motivate" id="motivation"></span></h2>
         </div>
     </div>
-    <script  src="script.js"></script>
+    </div>
+    <script src="script.js"></script>
+    
 </body>
+<footer>
+    <button class="button-36" id="speak" onclick="motiv();speakText();">Мотивируй меня!</button>  
+</footer>
+
 </html>
