--- a/index.html
+++ b/index.html
@@ -11,21 +11,25 @@
 </head>
 
 <body>
-    <div class="CVETIK">
-        <span class="mainText">
-            <h1>Твой мотиватор</h1>
-        </span>
-        <div class="smile"><img src="https://media.tenor.com/YcHBvIIpTnsAAAAi/hug-telagram-emoji.gif"></div>
-        <div class="motivationText">
-            <h2><span class="motivate" id="motivation"></span></h2>
+    <div class="wrapper">
+        <div class="CVETIK">
+            <span class="mainText">
+                <h1>Твой мотиватор</h1>
+            </span>
+            <div class="smile"><img src="https://media.tenor.com/YcHBvIIpTnsAAAAi/hug-telagram-emoji.gif"></div>
+            <div class="motivationText">
+                <h2><span class="motivate" id="motivation"></span></h2>
+            </div>
+
         </div>
-    </div>
+    
+
+    <footer>
+        <button class="button-36" id="speak" onclick="motiv();speakText();">Мотивируй меня!</button>
+    </footer>
     </div>
     <script src="script.js"></script>
-    
 </body>
-<footer>
-    <button class="button-36" id="speak" onclick="motiv();speakText();">Мотивируй меня!</button>  
-</footer>
+
 
 </html>
