--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div> -->
 
             <div class="motivationText">
-                <h2><span class="motivate" id="motivation"></span> <button class="repeat" id="repeat" onclick="speakText();"></button>
+                <h2><span class="motivate" id="motivation" onclick="speakText();"></span>
                 </h2>
 
             </div>
