--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <div>
+        <button class="muteBtn" id="muteBtn" onclick="mute();"></button>
+    </div>
     <div class="wrapper">
         <div class="CVETIK">
             <span class="mainText">
@@ -45,14 +48,17 @@
             <div class="motivationText">
                 <h2><span class="motivate" id="motivation" onclick="speakText();"></span>
                 </h2>
-
+                <div>
+                    <scpan id="counterClick"></scpan>
+                </div>
             </div>
 
         </div>
 
+       
 
         <footer>
-            <button class="button-36" id="speak" onclick="motiv();speakText();">Мотивируй меня!</button>
+            <button class="button-36" id="speak" onclick="motiv();speakText();clickCounter();">Мотивируй меня!</button>
         </footer>
     </div>
     <script src="script.js"></script>
